@@ -1,0 +1,14 @@
+<configure xmlns="http://namespaces.zope.org/zope"
+    xmlns:genericsetup="http://namespaces.zope.org/genericsetup"
+    i18n_domain="eea">
+
+    <genericsetup:registerProfile
+        name="testfixture"
+        title="eea.dataservice test fixture"
+        directory="../profiles/testfixture"
+        description="Test fixture profile with EEA browser layers"
+        provides="Products.GenericSetup.interfaces.EXTENSION"
+        for="Products.CMFPlone.interfaces.IPloneSiteRoot"
+        />
+
+</configure>
